fixing the alignment of sign in and registration page input boxes on small and medium screens

--- a/app/shared/styles/main.css
+++ b/app/shared/styles/main.css
@@ -76,7 +76,8 @@ md-sidenav {
 
 .navBarTitle {
   width: 70%;
-  max-width: 250px;
+  max-width: 200px;
+  padding: 0 8px;
 }
 
 .navBarThin {
@@ -104,6 +105,7 @@ md-sidenav {
 
 .inputBox {
   padding: 5px;
+  width: 100%;
 }
 
 .timeTrackerContainer {
